--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,9 @@
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import LatestPublication from "../components/latestpublication.astro";
+import FeaturedProject from "../components/featuredproject.astro";
+import LatestBlog from "../components/latestblog.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 ---
 
@@ -12,59 +15,39 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
     </head>
     <body>
         <Header />
-        <main>
-            <h1>🧑‍🚀 Hello, Astronaut!</h1>
-            <p>
-                Welcome to the official <a href="https://astro.build/">Astro</a>
-                blog starter template. This template serves as a lightweight, minimally-styled
-                starting point for anyone looking to build a personal website, blog,
-                or portfolio with Astro.
-            </p>
-            <p>
-                This template comes with a few integrations already configured
-                in your
-                <code>astro.config.mjs</code> file. You can customize your setup
-                with
-                <a href="https://astro.build/integrations">Astro Integrations</a
-                > to add tools like Tailwind, React, or Vue to your project.
-            </p>
-            <p>Here are a few ideas on how to get started with the template:</p>
-            <ul>
-                <li>Edit this page in <code>src/pages/index.astro</code></li>
-                <li>
-                    Edit the site header items in <code
-                        >src/components/Header.astro</code
-                    >
-                </li>
-                <li>
-                    Add your name to the footer in <code
-                        >src/components/Footer.astro</code
-                    >
-                </li>
-                <li>
-                    Check out the included blog posts in <code
-                        >src/content/blog/</code
-                    >
-                </li>
-                <li>
-                    Customize the blog post page layout in <code
-                        >src/layouts/BlogPost.astro</code
-                    >
-                </li>
-            </ul>
-            <p>
-                Have fun! If you get stuck, remember to <a
-                    href="https://docs.astro.build/"
-                    >read the docs
-                </a> or <a href="https://astro.build/chat">join us on Discord</a
-                > to ask questions.
-            </p>
-            <p>
-                Looking for a blog template with a bit more personality? Check
-                out <a href="https://github.com/Charca/astro-blog-template"
-                    >astro-blog-template
-                </a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-            </p>
+        <main class="container">
+            <div>
+                <section class="grid grid-cols-12 gap-4">
+                    <div class="col-span-8 flex flex-col justify-center">
+                        <h2 class="">Biplab Mahato</h2>
+                        <p>PhD Student</p>
+                        <p>
+                            Institute of Theoretical Physics, University of
+                            Wrocław.
+                        </p>
+                    </div>
+                    <div class="col-span-4 ms-32 p-4">
+                        <img
+                            src="/biplab.JPG"
+                            alt="Biplab"
+                            class="rounded-xl shadow-lg shadow-slate-400"
+                        />
+                    </div>
+                </section>
+                <!-- Institute section -->
+                <section>
+                    <!-- Photo -->
+                    <div></div>
+                    <!-- timeline -->
+                    <div></div>
+                </section>
+                <!-- Advertising section -->
+                <section>
+                    <LatestPublication />
+                    <FeaturedProject />
+                    <LatestBlog />
+                </section>
+            </div>
         </main>
         <Footer />
     </body>
