--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 const today = new Date();
 ---
 
-<footer>
+<footer class="bg-transparent">
     <div class="flex justify-between container mx-auto">
         &copy; {today.getFullYear()} Biplab Mahato. All rights reserved.
         <div class="social-links">
@@ -40,7 +40,7 @@ const today = new Date();
 </footer>
 <style>
     footer {
-        @apply bg-slate-100 pt-6 pb-12 text-center;
+        @apply pt-6 pb-12 text-center;
     }
     .social-links {
         display: flex;
