--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ const links = [
 ];
 ---
 
-<header class="sticky top-0 z-50 bg-zinc-50 shadow-md">
+<header class="sticky top-0 z-50 shadow-md bg-white/60 backdrop-blur-md">
     <nav class="">
         <div class="container flex justify-between mx-auto">
             <h2 class="uppercase text-lg tracking-wide content-center">
