--- a/src/layouts/mainlayout.astro
+++ b/src/layouts/mainlayout.astro
@@ -44,7 +44,7 @@ const { title, description, heroImage } = Astro.props;
         </style>
     </head>
 
-    <body>
+    <body class="bg-back bg-cover">
         <Header />
         <main>
             <article>
@@ -60,7 +60,7 @@ const { title, description, heroImage } = Astro.props;
                         )
                     }
                 </div>
-                <hr />
+                <!-- <hr /> -->
                 <div class="prose">
                     <div class="title">
                         <h1>{title}</h1>
