--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -17,10 +17,10 @@ const isActive = href === pathname || href === "/" + subpath?.[0];
     a {
         text-decoration: none;
         padding: 0.4rem 1rem;
-        @apply rounded-lg hover:bg-slate-100;
+        @apply rounded-lg hover:bg-slate-100/40;
     }
 
     a.active {
-        @apply bg-slate-300;
+        @apply bg-slate-300/40;
     }
 </style>
